fecdat/force-app/main/default/objects/FEC_In_Approval_Stage_Changes__c/FEC_In_Approval_Stage_Changes__c.object-meta.xml
<CustomObject>
    <description>Quản lý các tham số, điều kiện giữa các giai đoạn (Stage) của từng quy trình xử lý. Được sử dụng khi người dùng chỉnh sửa, cập nhật Stage Change</description>
    <label>In-Approval Stage Changes</label>
    <nameField>
        <displayFormat>SCN-{0}</displayFormat>
        <label>Stage Changes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>In-Approval Stage Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>