fecdat/force-app/main/default/objects/FEC_In_Approval_Stage_Changes__c/fields/FEC_Action__c.field-meta.xml
<CustomField>
    <fullName>FEC_Action__c</fullName>
    <description>Hành động thực hiện</description>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>