fecdat/force-app/main/default/objects/FEC_In_Approval_Stage_Changes__c/fields/FEC_Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Next_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tên Stage tiếp theo</description>
    <label>Next Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipLabel>In-Approval Stage Changes (Next Stage)</relationshipLabel>
    <relationshipName>In_Approval_Stage_Changes1</relationshipName>
    <type>Lookup</type>
</CustomField>