fecdat/force-app/main/default/objects/FEC_In_Approval_Stage_Changes__c/fields/FEC_Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Previous_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tên Stage hiện tại</description>
    <label>Previous Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipLabel>In-Approval Stage Changes</relationshipLabel>
    <relationshipName>In_Approval_Stage_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>