fecdat/force-app/main/default/objects/FEC_In_Approval_Stage_Changes__c/fields/FEC_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Queue_Name__c</fullName>
    <description>Rổ công việc sau khi chuyển Stage tiếp theo</description>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>