fecdat/force-app/main/default/objects/FEC_In_Approval_Stage_Changes__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Công thức để thực hiện change Stage</description>
    <label>Operator</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>